# 0r8ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py.save
app/core/: runner.py  spell_loader.py  spell_schema.json
docs/: docs.code-workspace
orb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build.ps1  build.sh
spells/: spell_template.yaml
tests/: test_cli.py  test_cli_run.py  test_runner.py  test_runner_vars.py  test_spell_loader.py  test_validation.py
